# Scopeon

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  install.sh  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/examples/: ai-cost-gate.yml
.github/workflows/: ci.yml  labeler.yml  pricing-review.yml  release.yml  stale.yml  welcome.yml
crates/scopeon-collector/: Cargo.toml
crates/scopeon-collector/src/: lib.rs  parser.rs  watcher.rs
crates/scopeon-collector/src/providers/: aider.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  generic_openai.rs  mod.rs  ollama.rs
crates/scopeon-collector/tests/: integration.rs
crates/scopeon-core/: Cargo.toml
crates/scopeon-core/src/: config.rs  context.rs  cost.rs  db.rs  lib.rs  models.rs  optimization.rs  provenance.rs  tags.rs  user_config.rs
crates/scopeon-mcp/: Cargo.toml
crates/scopeon-mcp/src/: lib.rs  server.rs
crates/scopeon-metrics/: Cargo.toml
crates/scopeon-metrics/src/: health.rs  lib.rs  metric.rs  registry.rs  suggestions.rs  tests.rs  thresholds.rs  waste.rs
crates/scopeon-metrics/src/builtin/: cache.rs  cost.rs  mod.rs  pattern.rs  quality.rs  velocity.rs
crates/scopeon-tui/: Cargo.toml
crates/scopeon-tui/src/: app.rs  lib.rs  logo.rs  text.rs  theme.rs  ui.rs  wizard.rs
crates/scopeon-tui/src/views/: agents.rs  budget.rs  cache.rs  components.rs  config.rs  dashboard.rs  distribution.rs  history.rs  insights.rs  live.rs  mod.rs  projects.rs  providers.rs  sessions.rs
docs/: README.md  architecture.md  changelog.md  ci.md  configuration.md  contributing.md  features.md  mcp.md  opentelemetry.md  providers.md  shell-git.md  team.md  tui.md  webhooks.md
docs/licenses/: LICENSE  LICENSE-APACHE  LICENSE-MIT
editors/neovim/: scopeon.lua
editors/vscode/: package.json  tsconfig.json
editors/vscode/src/: extension.ts
packaging/aur/: PKGBUILD
packaging/brew/: scopeon.rb
packaging/github-action/: action.yml
packaging/npm/: index.js  package.json  postinstall.js
packaging/pip/: pyproject.toml
packaging/pip/src/scopeon/: __main__.py
packaging/winget/manifests/s/scopeon/scopeon/0.6.0/: scopeon.scopeon.installer.yaml  scopeon.scopeon.locale.en-US.yaml  scopeon.scopeon.yaml
src/: badge.rs  ci.rs  dashboard.html  digest.rs  doctor.rs  git_hook.rs  main.rs  onboarding.rs  optimize.rs  serve.rs  shell_hook.rs  team.rs
