[workspace]
members = [
    ".",
    "crates/scopeon-core",
    "crates/scopeon-collector",
    "crates/scopeon-mcp",
    "crates/scopeon-tui",
    "crates/scopeon-metrics",
]
resolver = "2"

[package]
name = "scopeon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AI context observability TUI + MCP server for Claude Code. Track token usage, cache efficiency, costs, and history."

# cargo-binstall support — allows `cargo binstall scopeon` to download
# pre-built binaries from GitHub Releases instead of compiling from source.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/scopeon-v{ version }-{ target }.tar.gz"
bin-dir = "scopeon{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/scopeon-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[[bin]]
name = "scopeon"
path = "src/main.rs"

[features]
default = []
# OTel OTLP export: planned for future scopeon-otel crate

[dependencies]
scopeon-core = { path = "crates/scopeon-core", version = "0.6.0" }
scopeon-collector = { path = "crates/scopeon-collector", version = "0.6.0" }
scopeon-mcp = { path = "crates/scopeon-mcp", version = "0.6.0" }
scopeon-tui = { path = "crates/scopeon-tui", version = "0.6.0" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
crossterm = { workspace = true }
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.88"
authors = ["Scopeon Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sorunokoe/Scopeon"
homepage = "https://github.com/sorunokoe/Scopeon"
documentation = "https://docs.rs/scopeon"
readme = "README.md"
keywords = ["ai", "observability", "claude", "tokens", "tui"]
categories = ["command-line-utilities", "development-tools", "visualization"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "7"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "6"
unicode-width = "0.2"
toml = "0.8"
url = "2"

# HTTP server (for scopeon serve)
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
strip = true
